update friend
